updated paths and content

--- a/valentine/index.html
+++ b/valentine/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>For My Valentine 💖</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -65,14 +65,14 @@
 <p class="slider-text">Some of our sweetest moments 💞</p>
 
 <div class="slider">
-  <img src="images/heart1.jpg" class="slide active-slide">
-  <img src="images/heart2.jpg" class="slide">
-  <img src="images/heart3.jpg" class="slide">
+  <img src="./images/heart1.jpg" class="slide active-slide">
+  <img src="./images/heart2.jpg" class="slide">
+  <img src="./images/heart3.jpg" class="slide">
 </div>
 
 <p class="slider-text">And many more memories to come 🥹💗</p>
 
 
-<script src="script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
